<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pinkAndLavender"
    android:orientation="vertical">

    <TextView
        android:id="@+id/fmt_input_with_password_tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:paddingBottom="26dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="26dp"
        android:text="@string/input_mail_title"
        android:textColor="@color/gray"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/fmt_input_with_password_et_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fmt_input_with_password_tv_title"
        android:background="@android:color/white"
        android:fontFamily="sans-serif-light"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:paddingBottom="10dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="10dp"
        android:textColor="@color/gray" />

    <EditText
        android:id="@+id/fmt_input_with_password_et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/fmt_input_with_password_et_mail"
        android:background="@android:color/white"
        android:fontFamily="sans-serif-light"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingBottom="10dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="10dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/gray" />

    <Button
        android:id="@+id/fmt_input_with_password_btn_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fmt_input_with_password_et_password"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/selector_blue_button"
        android:fontFamily="sans-serif-light"
        android:paddingBottom="12dp"
        android:paddingTop="12dp"
        android:text="@string/input"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="19sp" />

    <Button
        android:id="@+id/fmt_input_with_password_btn_input_with_code"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/fmt_input_with_password_btn_input"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/selector_gray_button"
        android:fontFamily="sans-serif-light"
        android:text="@string/input_without_password"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/fmt_input_with_password_tv_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/fmt_input_with_password_btn_input_with_code"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/input_footer"
        android:textColor="@color/gray_light"
        android:textSize="15sp" />
</RelativeLayout>